<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <ImageView
        android:id="@+id/back_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:background="@drawable/selectable_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_arrow_back_24dp" />

    <View
        android:id="@+id/indicator_step_1"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="parent">

        <aapt:attr name="android:background">

            <shape android:shape="oval">

                <solid android:color="@color/medium_grey" />

            </shape>

        </aapt:attr>

    </View>

    <View
        android:id="@+id/indicator_step_2"
        android:layout_width="8dp"
        android:layout_height="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/space"
        app:layout_constraintTop_toTopOf="parent">

        <aapt:attr name="android:background">

            <shape android:shape="oval">

                <solid android:color="@color/white" />

            </shape>

        </aapt:attr>

    </View>

    <LinearLayout
        android:id="@+id/forward"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:background="@drawable/selectable_background"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/forward_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/confirm"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/forward_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="180"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_arrow_back_24dp" />

    </LinearLayout>

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/forward"
        app:layout_constraintStart_toStartOf="@+id/back_icon"
        app:layout_constraintTop_toTopOf="parent" />

</merge>